[project]
name = "pl-standings-20-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.0.1",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
